Check for detected public file

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
   <body>
   <h1>Sample Site</h1>
     <p id="welcome">Hello, Thank you for accessing to this website.</p>
-    <p id="welcome">Additional change is made</p>
+    <p id="welcome">Change is made. Can you detect it?</p>
     <button onclick="swapWelcome()">Greeting!</button>
 
     <script>
