--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample Site</title>
+    <title>Sample Site Hello</title>
   </head>
   <body>
   <h1>Sample Site</h1>
