If same job is run what happens

--- a/app/sample/index.html
+++ b/app/sample/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample 2 Test</title>
+    <title>Sample 2 T</title>
   </head>
   <body>
   <h1>Sample Site 2</h1>
