--- a/app/sample/index.html
+++ b/app/sample/index.html
@@ -4,7 +4,7 @@
     <title>Sample 2 T</title>
   </head>
   <body>
-  <h1>Sample Site 3</h1>
+  <h1>Sample Site</h1>
     <p id="welcome">Hello, Thank you for accessing to this website.</p>
     <button onclick="swapWelcome()">Greeting! Double</button>
 
