--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
     <title>Sample Site H</title>
   </head>
   <body>
-  <h1>Sample Site</h1>
+  <h1>Sample Site 1</h1>
     <p id="welcome">Hello, Thank you for accessing to this website.</p>
     <p id="welcome">Change is made. Can you detect it?</p>
     <button onclick="swapWelcome()">Greeting!</button>
